--- a/src/View/Fight/fight.html.twig
+++ b/src/View/Fight/fight.html.twig
@@ -2,6 +2,7 @@
 
 {% block content %}
 {% include '/Item/return.html.twig'%}
+<h1 class='resultTitle'> RESULT </h1>
 <section class='result'>
     <div class='winner'>
         <img src="/assets/images/{{winner.name|lower}}.png" class ="winnerImage">
