--- a/src/View/Fight/attack.html.twig
+++ b/src/View/Fight/attack.html.twig
@@ -18,13 +18,13 @@
     <p>{{currentAttacker.name}} attacks {{adversary.name}}</p>
     <p>{{currentAttacker.name}} does {{damage}} damage</p>
     {% if damage == 20 %}
-       <p>TEST 20</p>
+       <p>{{ random(['Perfect !', 'It\'s a 10/10', 'It\'s amazing !', 'Discombobulated !'])}}</p>
     {% elseif damage > 10 %}
-    <p>TEST 19 TO 11</p>
+    <p> {{ random(['A real punch in the face !', 'It\'s a real damage !', 'Wow ! You\'ve improved a lot, fighter !'])}} </p>
     {% elseif damage > 0 %}
-    <p>TEST 10 TO 1</p>
+    <p> {{ random(['You could have made an effort !', 'You can do better !', 'Do you have paper gloves or something ?', 'Come On !']) }} </p>
     {% else %}
-     <p>TEST 0</p>
+     <p> {{ random(['He would never hurt anyone with this punch !', 'Great defense !', 'Strike faster if you want to hit me !', 'Wake up, you look like a child !', 'Nice dodge !']) }} </p>
     {% endif %}
     <p>{{adversary.name}} has {{adversary.life}} life left</p>
 </div>
