--- a/src/View/Fight/attack.html.twig
+++ b/src/View/Fight/attack.html.twig
@@ -2,7 +2,7 @@
 
 {% block content %}
 <main class='attackPage'>
-    <p class='roundTitle'>Round {{round}}</p>
+    <p class='roundTitle'>Round {{round}} | {{adversary.name}} turn</p>
 <section class='players'>
     <div class='player'>
         <img src="/assets/images/{{player1.name|lower}}.png" class ="playerImage">
