--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -4,6 +4,7 @@
 
 body {
     margin: 0;
+    min-height: 100vh;
 }
 
 :root {
@@ -91,9 +92,6 @@ body {
     display: flex;
     justify-content: center;
 }
-.img-home {
-    padding: 10px;
-}
 
 /* END HOME */
 /* PICK FIGHTER */
@@ -143,7 +141,7 @@ body {
 }
 
 .roundTitle {
-    font-size: 2rem;
+  font-size: 1.7rem;
     padding-bottom: 1rem;
     color: white;
     background-color: var(--secondaryColor);
