delete obsolete padding value on player and players

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -159,7 +159,7 @@ body {
   .player {
     padding: 1rem;
     justify-content: center;
-    padding: 0rem;
+    /* padding: 0rem; */
   }
   .playerImage{
     height: 20vh;
