--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -180,9 +180,7 @@ body {
     padding: 2rem;
     background-color:#FE3535;
     box-shadow: 5px 5px black;
-    margin-right: 3rem;
-    margin-left: 3rem;
-    margin-top: 0rem;
+    margin: 0 3rem;
     font-size: 3rem;
     color: white;
     text-decoration: none;
