update color white on attackButtonClass

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -182,7 +182,7 @@ body {
     box-shadow: 5px 5px black;
     margin: 0 3rem;
     font-size: 3rem;
-    color: white;
+    color:#fefee2;
     text-decoration: none;
   }
   
