--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -13,6 +13,7 @@ body {
     --primaryColor: #FE3535;
     --primaryColorAlter: #FF5757;
     --secondaryColor:#0056AF;
+    --primaryBoxShadow: 5px 5px black;
 
     background-color: var(--backgroundColor);
     
@@ -47,7 +48,7 @@ body {
 .menu-links {
     padding: 0.4rem;
     background-color:var(--secondaryColor);
-    box-shadow: 5px 5px black;
+    box-shadow: var(--primaryBoxShadow);
     text-decoration: none;
     color: white;
 }
@@ -86,7 +87,7 @@ body {
     color: white;
     background-color: var(--primaryColor);
     padding: 1rem 2rem;
-    box-shadow: 5px 5px black;
+    box-shadow: var(--primaryBoxShadow);
 }
 .navbarfighter {
     display: flex;
@@ -103,7 +104,7 @@ body {
     width: 90vw;
     padding: 0rem 1rem 0rem 1rem;
     background: var(--secondaryColor);
-    box-shadow: 5px 5px black;  
+    box-shadow: var(--primaryBoxShadow);  
     color: white;
     font-size: 2rem;
 }
@@ -145,7 +146,7 @@ body {
   font-size: 1.7rem;
     color: white;
     background-color: var(--secondaryColor);
-    box-shadow: 5px 5px black;
+    box-shadow: var(--primaryBoxShadow);
     margin: 2rem 3rem;
     padding: 0.2rem;
 }
@@ -169,7 +170,7 @@ body {
     align-items: center;
     width: auto;
     background-color:rgba(255, 255, 255);
-    box-shadow: 5px 5px black;
+    box-shadow: var(--primaryBoxShadow);
     margin: 0 3rem 1rem 3rem; 
     padding: 0.2rem;
     line-height: 1rem;
@@ -181,7 +182,7 @@ body {
     width: auto;
     padding: 2rem;
     background-color:#FE3535;
-    box-shadow: 5px 5px black;
+    box-shadow: var(--primaryBoxShadow);
     margin: 0 3rem;
     font-size: 3rem;
     color:#fefee2;
@@ -204,7 +205,7 @@ body {
     text-align: center;
     background-color:var(--secondaryColor);
     border: 2px solid black;
-    box-shadow: 5px 5px black;
+    box-shadow: var(--primaryBoxShadow);
     text-transform: uppercase;
     padding: 1.5rem;
     margin: 1rem;
@@ -222,7 +223,7 @@ body {
 .result p{
   padding: 0.5rem;
   background-color : rgb(255, 255, 255);
-  box-shadow: 5px 5px black;
+  box-shadow: var(--primaryBoxShadow);
   text-align: center;
 }
 
@@ -252,7 +253,7 @@ body {
   color: white;
   padding: 0.8rem;
   background-color:#FE3535;
-  box-shadow: 5px 5px black;
+  box-shadow: var(--primaryBoxShadow);
 }
 
 /* END WIN */
@@ -266,7 +267,7 @@ body {
     margin-top: 15vh;
     background-color:var(--secondaryColor);
     border: 2px solid black;
-    box-shadow: 5px 5px black;
+    box-shadow: var(--primaryBoxShadow);
     text-transform: uppercase;
     padding: 1.5rem;
     margin: 2rem;
@@ -283,7 +284,7 @@ body {
     border: 2px solid black;
     background-color: var(--primaryColor);
     margin-top: 3rem;
-    box-shadow: 5px 5px black;
+    box-shadow: var(--primaryBoxShadow);
 }
 
 tr, td {
@@ -352,7 +353,7 @@ tfoot {
     margin-top: 15vh;
     background-color:var(--secondaryColor);
     border: 3px solid black;
-    box-shadow: 5px 5px black;
+    box-shadow: var(--primaryBoxShadow);
     text-transform: uppercase;
     padding: 1.5rem;
     margin: 2rem;
