--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -14,7 +14,9 @@ body {
     --primaryColorAlter: #FF5757;
     --secondaryColor:#0056AF;
     --white: #fefee2;
-    --primaryBoxShadow: 5px 5px black;
+    --black: #010101;
+    --primaryBoxShadow: 5px 5px var(--black);
+    --primaryBorder: 2px solid var(--black);
 
     background-color: var(--backgroundColor);
     
@@ -26,8 +28,8 @@ body {
     height: 3rem;
     bottom: 2rem;
     right: 1rem;
-    border: 2px solid black;
-    box-shadow: 3px 3px black;
+    border: var(--primaryBorder);
+    box-shadow: 3px 3px var(--black);
 }
 
 /* NAVBAR */
@@ -51,7 +53,7 @@ body {
     background-color:var(--secondaryColor);
     box-shadow: var(--primaryBoxShadow);
     text-decoration: none;
-    color: white;
+    color: var(--white);
 }
 
 @keyframes blinker {
@@ -85,7 +87,7 @@ body {
     justify-content: center;
     text-transform: uppercase;
     font-size: 6rem;
-    color: white;
+    color: var(--white);
     background-color: var(--primaryColor);
     padding: 1rem 2rem;
     box-shadow: var(--primaryBoxShadow);
@@ -106,7 +108,7 @@ body {
     padding: 0rem 1rem 0rem 1rem;
     background: var(--secondaryColor);
     box-shadow: var(--primaryBoxShadow);  
-    color: white;
+    color: var(--white);
     font-size: 2rem;
 }
 
@@ -124,10 +126,10 @@ body {
     position: relative;
     padding: 0.5rem 2rem 0.5rem 2rem;
     background:var(--secondaryColor);
-    box-shadow: 3px 3px black;
+    box-shadow: 3px 3px var(--black);
     font-family: 'VT323', monospace;
     font-size: 1.3rem;
-    color: white;
+    color: var(--white);
     text-decoration: none;
     margin-bottom: 1rem;
 }
@@ -145,7 +147,7 @@ body {
 
 .roundTitle {
   font-size: 1.7rem;
-    color: white;
+    color: var(--white);
     background-color: var(--secondaryColor);
     box-shadow: var(--primaryBoxShadow);
     margin: 2rem 3rem;
@@ -201,11 +203,11 @@ body {
 }
 
 .resultTitle {
-    color: white;
+    color: var(--white);
     font-size: 45px;
     text-align: center;
     background-color:var(--secondaryColor);
-    border: 2px solid black;
+    border: var(--primaryBorder);
     box-shadow: var(--primaryBoxShadow);
     text-transform: uppercase;
     padding: 1.5rem;
@@ -251,7 +253,7 @@ body {
 
 .announce {
   font-size: 2rem;
-  color: white;
+  color: var(--white);
   padding: 0.8rem;
   background-color:var(--primaryColor);
   box-shadow: var(--primaryBoxShadow);
@@ -267,7 +269,7 @@ body {
     text-align: center;
     margin-top: 15vh;
     background-color:var(--secondaryColor);
-    border: 2px solid black;
+    border: var(--primaryBorder);
     box-shadow: var(--primaryBoxShadow);
     text-transform: uppercase;
     padding: 1.5rem;
@@ -282,7 +284,7 @@ body {
 
 .fightHistory {
     border-collapse: collapse;
-    border: 2px solid black;
+    border: var(--primaryBorder);
     background-color: var(--primaryColor);
     margin-top: 3rem;
     box-shadow: var(--primaryBoxShadow);
@@ -291,13 +293,13 @@ body {
 tr, td {
     font-size: 22px;
     padding: 1rem;
-    border: 2px solid black;
+    border: var(--primaryBorder);
 }
 
 thead,
 tfoot {
     background-color: var(--secondaryColor);
-    color:white;
+    color:var(--white);
     font-size: 22px;
 
 }
@@ -316,12 +318,12 @@ tfoot {
     flex-direction: column;
 }
 .card-fighter {
-    background-color: white;
-    border: 5px solid black;
+    background-color: var(--white);
+    border: 2px solid var(--black);
 }
 .card-img {
     background-color:var(--primaryColorAlter);
-    border: 3px solid black;
+    border: 3px solid var(--black);
     padding: 3rem;
 }
 .card-fighter-skills {
@@ -346,14 +348,14 @@ tfoot {
 }
 
 .creditTitle {
-    color: white;
+    color: var(--white);
     display: block;
     justify-content: center;
     font-size: 5rem;
     text-align: center;
     margin-top: 15vh;
     background-color:var(--secondaryColor);
-    border: 3px solid black;
+    border: 3px solid var(--black);
     box-shadow: var(--primaryBoxShadow);
     text-transform: uppercase;
     padding: 1.5rem;
