--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -96,7 +96,9 @@ body {
     display: flex;
     justify-content: center;
 }
-
+.img-home {
+  z-index: -1;
+}
 /* END HOME */
 /* PICK FIGHTER */
 
