create buttons for new attacks

--- a/src/View/Fight/attack.html.twig
+++ b/src/View/Fight/attack.html.twig
@@ -30,6 +30,9 @@
     {% endif %}
     <p>{{adversary.name}} has {{adversary.life}} life left</p>
 </div>
-    <a class='attackButton' href='/fight/damage'>ATTACK !</a>
+    <a class='punchButton' href='/fight/punch'>PUNCH !</a>
+    <a class='kickButton' href='/fight/kick'>KICK !</a>
+    <a class='headbuttButton' href='/fight/headbutt'>HEADBUTT!</a>
+    <a class='teatimeButton' href='/fight/teatime'>TEATIME !</a>
 </main>
 {% endblock %}
