change route for history

--- a/src/View/Item/navbar.html.twig
+++ b/src/View/Item/navbar.html.twig
@@ -2,7 +2,7 @@
     <ul class="menu">
         <li><a class="menu-links" href="/fight/pick">Fight</a></li>
         <li><a class="menu-links" href="/fighters">Fighters List</a></li>
-        <li><a class="menu-links" href="/fight/history">Fights History</a></li>
+        <li><a class="menu-links" href="/history">Fights History</a></li>
         <li><a class="menu-links" href="credits/credit">Credits</a></li>
     </ul>
 </nav>
