fix css button attacks

--- a/src/View/Fight/attack.html.twig
+++ b/src/View/Fight/attack.html.twig
@@ -30,9 +30,11 @@
     {% endif %}
     <p>{{adversary.name}} has {{adversary.life}} life left</p>
 </div>
+<div id="grid">
     <a class='attackButton' href='/fight/punch'>PUNCH !</a>
     <a class='attackButton' href='/fight/kick'>KICK !</a>
     <a class='attackButton' href='/fight/headbutt'>HEADBUTT!</a>
     <a class='attackButton' href='/fight/teatime'>TEATIME !</a>
+</div>
 </main>
 {% endblock %}
