--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -180,16 +180,21 @@ body {
     padding: 0.2rem;
     line-height: 1rem;
   }
+
+  #grid {
+    display: grid;
+    grid-template-columns: 50% auto;
+    grid-row-gap: 1rem;
+  }
+
   .attackButton {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: auto;
-    padding: 2rem;
     background-color:var(--primaryColor);
     box-shadow: var(--primaryBoxShadow);
-    margin: 0 3rem;
-    font-size: 3rem;
+    margin: 0 1rem;
+    font-size: 2.5rem;
     color:#fefee2;
     text-decoration: none;
   }
