--- a/src/View/Item/navbar.html.twig
+++ b/src/View/Item/navbar.html.twig
@@ -3,6 +3,6 @@
         <li><a class="menu-links" href="/fight/pick">Fight</a></li>
         <li><a class="menu-links" href="/fighters">Fighters List</a></li>
         <li><a class="menu-links" href="/history">Fights History</a></li>
-        <li><a class="menu-links" href="credits/credit">Credits</a></li>
+        <li><a class="menu-links" href="/credits">Credits</a></li>
     </ul>
 </nav>
