--- a/src/View/Fight/attack.html.twig
+++ b/src/View/Fight/attack.html.twig
@@ -5,15 +5,13 @@
     <p class='roundTitle'>Round {{round}} | {{adversary.name}} turn</p>
 <section class='players'>
     <div class='player'>
+        <p class='statsPlayer'> {{player1.name}} <br>❤ {{player1.life}}</p>
         <img src="/assets/images/{{player1.name|lower}}.png" class ="playerImage">
-        <p class='statsPlayer'> {{player1.name}} <br>❤ {{player1.life}}  <br>Atk: {{player1.attack}}<br>Def: {{player1.defense}}
-        </p>
     </div>
     <div class='player'>VS</div>
     <div class='player'>
+        <p class='statsPlayer'> {{player2.name}} <br>❤ {{player2.life}}</p>
         <img src="/assets/images/{{player2.name|lower}}.png" class ="playerImage">
-        <p class='statsPlayer'> {{player2.name}} <br>❤ {{player2.life}}  <br>Atk: {{player2.attack}}<br>Def: {{player2.defense}}
-        </p>
     </div>
 </section>
 <div class="display">
