--- a/src/View/Fight/attack.html.twig
+++ b/src/View/Fight/attack.html.twig
@@ -5,13 +5,18 @@
     <p class='roundTitle'>Round {{round}} | {{adversary.name}} turn</p>
 <section class='players'>
     <div class='player'>
-        <p class='statsPlayer'> {{player1.name}} <br>❤ {{player1.life}}</p>
-        <img src="/assets/images/{{player1.name|lower}}.png" class ="playerImage">
+        <div class="playerHeader">
+            <p class='statsPlayer'> {{player1.name}}</p>
+            <progress class='lifeBar' max="100" value="{{player1.life}}"></progress>
+        </div>
+            <img src="/assets/images/{{player1.name|lower}}.png" class ="playerImage">
     </div>
-    <div class='player'>VS</div>
     <div class='player'>
-        <p class='statsPlayer'> {{player2.name}} <br>❤ {{player2.life}}</p>
-        <img src="/assets/images/{{player2.name|lower}}.png" class ="playerImage">
+        <div class="playerHeader">
+            <p class='statsPlayer'> {{player2.name}}</p>
+            <progress class='lifeBar' max="100" value="{{player2.life}}"></progress>
+        </div>
+            <img src="/assets/images/{{player2.name|lower}}.png" class ="playerImage">
     </div>
 </section>
 <div class="display">
