--- a/src/View/Fight/fight.html.twig
+++ b/src/View/Fight/fight.html.twig
@@ -12,7 +12,7 @@
 
     <div class='loser'>
         <img src="/assets/images/{{loser.name|lower}}.png" class ="loserImage">
-        <p> LOOSER 💀{{loser.name}} <br>❤ {{loser.life}} 
+        <p> LOSER 💀{{loser.name}} <br>❤ {{loser.life}} 
         </p>
     </div>
 </section>
