--- a/src/View/Fighters/fighterslist.html.twig
+++ b/src/View/Fighters/fighterslist.html.twig
@@ -2,7 +2,7 @@
 
 {% block content %}
     <h1 class="fighterListTitle">Fighters List</h1>
-    <section class="card-deck">
+    <main class="card-deck">
         {% for fighter in fighters %}
             <figure class="card-fighter">
                 <h2 class="card-fighter-name">{{fighter.name}}</h2>
@@ -16,6 +16,6 @@
                 </figcaption>
             </figure>
         {% endfor %}
-    </section>
+    </main>
     {% include '/Item/return.html.twig'%}
 {% endblock %}
