--- a/src/View/Fight/attack.html.twig
+++ b/src/View/Fight/attack.html.twig
@@ -32,16 +32,16 @@
     {% endif %}
     {% if currentAttack == 'teatime' %}
         <p>{{ random(['Perfect !', 'Delicious !', 'English tea at its finest !', 'Quite soothing !'])}}</p>
+    {% elseif currentAttack == 'headbutt' %}
+        <p>{{ random(['Skull Breaker !', 'WHAT A BASH', 'Didn\'t see that one coming !', 'Just a nosebleed !'])}}</p>
     {% elseif damage == 20 %}
         <p>{{ random(['Perfect !', 'It\'s a 10/10', 'It\'s amazing !', 'Discombobulated !'])}}</p>
     {% elseif damage > 10 %}
-        <p> {{ random(['A real punch in the face !', 'Now that\'s a lot of damage !', 'Wow ! You\'ve improved a lot, fighter !', 'AH! Didn\'t see that one coming huh ?'])}} </p>
-    {% elseif currentAttack == 'teatime' %}
-    <p>{{ random(['Perfect !', 'Delicious !', 'English tea at its finest !', 'Quite soothing !'])}}</p>
+        <p>{{ random(['A real punch in the face !', 'Now that\'s a lot of damage !', 'Wow ! You\'ve improved a lot, fighter !', 'AH! Didn\'t see that one coming huh ?'])}}</p>
     {% elseif damage > 0 %}
-        <p> {{ random(['You could have tried harder !', 'You can do better !', 'Are you wearing paper gloves or something ?', "Come on !",'Pss, nothing but a light bruise !'])}} </p>
+        <p>{{ random(['You could have tried harder !', 'You can do better !', 'Are you wearing paper gloves or something ?', "Come on !",'Pss, nothing but a light bruise !'])}}</p>
     {% else %}
-        <p> {{ random(['You would never hurt anyone with this punch !', 'Great defense !', 'Strike faster if you want to hit me !', 'Wake up, you look like a child !', 'Nice dodge !', 'Can you really call this a punch ?', 'My grandma punches harder !', 'Just like the wind, nothing can hit you !']) }} </p>
+        <p>{{ random(['You would never hurt anyone with this punch !', 'Great defense !', 'Strike faster if you want to hit me !', 'Wake up, you look like a child !', 'Nice dodge !', 'Can you really call this a punch ?', 'My grandma punches harder !', 'Just like the wind, nothing can hit you !']) }}</p>
     {% endif %}
     {% if currentAttack == 'teatime' %}
         <p>{{currentAttacker.name}} has {{currentAttacker.life}} HP left</p>
