NEXT button fixed

--- a/src/View/Fight/pickFighter.html.twig
+++ b/src/View/Fight/pickFighter.html.twig
@@ -26,6 +26,7 @@
                 {% endfor %}
                 <button class="submitSelectedCharacter" type='submit'> NEXT </button>
             </form>
+            <div class="marge"></div>
     </section>
     {% include '/Item/return.html.twig'%}
 {% endblock %}
