--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -371,7 +371,7 @@ tfoot {
 .card-fighter {
     background-color: var(--white);
     border: 2px solid var(--black);
-    padding: 2rem;
+    padding: 1rem;
 }
 .card-img {
     background-color:var(--primaryColorAlter);
@@ -478,7 +478,7 @@ tfoot {
 
 /* END FIGHT|HISTORY */
 /* PICK LIST|FIGHTER*/
-.card-deck {
+.card-deck, .pick {
   display: flex;
   justify-content: center;
   flex-direction: row;
