--- a/src/View/Home/index.html.twig
+++ b/src/View/Home/index.html.twig
@@ -1,4 +1,5 @@
 {% extends 'layout.html.twig' %}
+{% block title %}BAKER STREET FIGHTER{% endblock %}
 
 {% block content %}
     <div class="home">
