credits title page

--- a/src/View/credits/credit.html.twig
+++ b/src/View/credits/credit.html.twig
@@ -1,4 +1,5 @@
 {% extends 'layout.html.twig' %}
+{% block title %}CREDITS{% endblock %}
 
 {% block content %}
 {% include '/Item/return.html.twig'%}
