fighters list page title

--- a/src/View/Fight/pickFighter.html.twig
+++ b/src/View/Fight/pickFighter.html.twig
@@ -1,4 +1,5 @@
 {% extends 'layout.html.twig' %}
+{% block title %}CHOOSE YOUR FIGHTERS{% endblock %}
 
 {% block content %}
     <section class="card-deck">
