--- a/src/View/Fighters/fighterslist.html.twig
+++ b/src/View/Fighters/fighterslist.html.twig
@@ -1,4 +1,5 @@
 {% extends 'layout.html.twig' %}
+{% block title %}FIGHTERS LIST{% endblock %}
 
 {% block content %}
     <h1 class="fighterListTitle">Fighters List</h1>
