fights history title

--- a/src/View/Fight/index.html.twig
+++ b/src/View/Fight/index.html.twig
@@ -1,4 +1,5 @@
 {% extends 'layout.html.twig' %}
+{% block title %}FIGHTS HISTORY{% endblock %}
 
 {% block content %}
 {% include '/Item/return.html.twig'%}
