--- a/src/View/Fight/attack.html.twig
+++ b/src/View/Fight/attack.html.twig
@@ -9,14 +9,14 @@
             <p class='statsPlayer'> {{player1.name}}</p>
             <progress class='lifeBar' max="100" value="{{player1.life}}"></progress>
         </div>
-            <img src="/assets/images/{{player1.name|lower}}.png" class ="playerImage">
+            <img src="/assets/images/{{player1.name|lower}}.svg" class ="playerImage">
     </div>
     <div class='player'>
         <div class="playerHeader">
             <p class='statsPlayer'> {{player2.name}}</p>
             <progress class='lifeBar' max="100" value="{{player2.life}}"></progress>
         </div>
-            <img src="/assets/images/{{player2.name|lower}}.png" class ="playerImage">
+            <img src="/assets/images/{{player2.name|lower}}.svg" class ="playerImage">
     </div>
 </section>
 <div class="display">
