--- a/src/View/Fight/fight.html.twig
+++ b/src/View/Fight/fight.html.twig
@@ -6,13 +6,13 @@
 <h1 class='resultTitle'> RESULT </h1>
 <section class='result'>
     <div class='winner'>
-        <img src="/assets/images/{{winner.name|lower}}.png" class ="winnerImage">
+        <img src="/assets/images/{{winner.name|lower}}.svg" class ="winnerImage">
         <p>WINNER 🏆{{winner.name}} <br>❤ {{winner.life}}  
         </p>
     </div>
 
     <div class='loser'>
-        <img src="/assets/images/{{loser.name|lower}}.png" class ="loserImage">
+        <img src="/assets/images/{{loser.name|lower}}.svg" class ="loserImage">
         <p> LOSER 💀{{loser.name}} <br>❤ {{loser.life}} 
         </p>
     </div>
