--- a/src/View/Fight/fight.html.twig
+++ b/src/View/Fight/fight.html.twig
@@ -4,28 +4,28 @@
 
 {% include '/Item/returnHome.html.twig'%}
 
-<section class='result'>
-    <h1 class='resultTitle'> RESULT </h1>
-        <div class='winner'>
-            <img src="/assets/images/{{winner.name|lower}}.png" class ="winnerImage">
-            <p>WINNER 🏆{{winner.name}} <br>❤ {{winner.life}}  
-            </p>
-        </div>
+<h1 class='resultTitle'> RESULT </h1>
 
-        <div class='loser'>
-            <img src="/assets/images/{{loser.name|lower}}.png" class ="loserImage">
-            <p> LOSER 💀{{loser.name}} <br>❤ {{loser.life}} 
-            </p>
-        </div>
-</section>
+<main class='result'>
 
-<aside class='fightDetails'>
+    <figure class='winner'>
+        <img src="/assets/images/{{winner.name|lower}}.png" class ="winnerImage">
+        <figcaption>WINNER 🏆{{winner.name}} <br>❤ {{winner.life}}</figcaption>
+    </figure>
+
+    <figure class='loser'>
+        <img src="/assets/images/{{loser.name|lower}}.png" class ="loserImage">
+        <figcaption>LOSER 💀{{loser.name}} <br>❤ {{loser.life}}</figcaption>
+    </figure>
+
+</main>
+
+<div class='fightDetails'>
+
     <div class='announce'>
         <p>K.O in {{round}} rounds !! Elementary my dear ! 🧐</p>
     </div>
-    <div class='fightReview'>
-        <p></p>
-    </div>
-</aside>
+
+</div>
 
 {% endblock %}
