--- a/src/View/Fight/index.html.twig
+++ b/src/View/Fight/index.html.twig
@@ -3,8 +3,13 @@
 
 {% block content %}
 {% include '/Item/return.html.twig'%}
-    <h1 class="fightsHistoryTitle">Fights History</h1>
+
+<main class = "history">
+
     <section class="fightsTable">
+
+        <h1 class="fightsHistoryTitle">Fights History</h1>
+
         <table class="fightHistory">
             <thead class="tableHead">
                 <tr>
@@ -14,12 +19,15 @@
             </thead>
             <tbody>
             {% for fight in fights %}
-             <tr>
+                <tr>
                 <td class="dateWinner">{{ fight.date }}</td>
                 <td class="nameWinner">{{ fight.name }}</td>
-             </tr>
+                </tr>
             {% endfor %}
             </tbody>
         </table>
-    </section>    
+
+    </section>
+    
+</main>    
 {% endblock %}
