improved readability of credits

--- a/src/View/credits/credit.html.twig
+++ b/src/View/credits/credit.html.twig
@@ -2,18 +2,24 @@
 {% block title %}CREDITS{% endblock %}
 
 {% block content %}
+
 {% include '/Item/return.html.twig'%}
-<div class="credit">
+
+<section class="credit">
+
     <h1 Class="creditTitle">Credits</h1>
-<ul class="creditList">
-    <li>Antoine Leclabart</li>
-    <li>Bilal Amiche</li>
-    <li>Clément Moreaux</li>
-    <li>Jordan Verreaux</li>
-    <li>Marjorie Thomassin</li>
-    <li>Robin Jonval</li>
-    <li>Romain Guillemot</li>
-    <li>Théo Drouet</li>
-</ul>
-</div> 
+
+    <ul class="creditList">
+        <li>Antoine Leclabart</li>
+        <li>Bilal Amiche</li>
+        <li>Clément Moreaux</li>
+        <li>Jordan Verreaux</li>
+        <li>Marjorie Thomassin</li>
+        <li>Robin Jonval</li>
+        <li>Romain Guillemot</li>
+        <li>Théo Drouet</li>
+    </ul>
+
+</section> 
+
 {% endblock content %}
