--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -268,7 +268,7 @@ progress {
   font-size: 1.7rem;
 }
 
-.result p{
+.result figcaption{
   padding: 0.5rem;
   background-color : rgb(255, 255, 255);
   box-shadow: var(--primaryBoxShadow);
