--- a/src/View/Home/index.html.twig
+++ b/src/View/Home/index.html.twig
@@ -6,8 +6,13 @@
         <h1 class="home-title">Baker<br> Street<br> Fighter<br></h1>
     </div>
     <div class="navbarfighter">
-        <img class="img-home" src="/assets/images/sherlock.svg" alt="sherlock image">
+        <img class="img-home" id="marjorie" src="/assets/images/marjorie.svg" alt="marjorie image">
+        <img class="img-home" id="hudson" src="/assets/images/hudson.svg" alt="hudson image">
+        <img class="img-home" id="sherlock" src="/assets/images/sherlock.svg" alt="sherlock image">
         {% include 'Item/navbar.html.twig' %}
-        <img class="img-home" src="/assets/images/moriarty.svg" alt="moriarty image">
+        <img class="img-home" id="moriarty" src="/assets/images/moriarty.svg" alt="moriarty image">
+        <img class="img-home" id="enola" src="/assets/images/enola.svg" alt="enola image">
+        <img class="img-home" id="romain" src="/assets/images/romain.svg" alt="romain image">
+
     </div>
 {% endblock %}
