--- a/src/View/Fight/index.html.twig
+++ b/src/View/Fight/index.html.twig
@@ -4,30 +4,30 @@
 {% block content %}
 {% include '/Item/return.html.twig'%}
 
-<main class = "history">
-
-    <section class="fightsTable">
+<section class = "history">
 
         <h1 class="fightsHistoryTitle">Fights History</h1>
 
-        <table class="fightHistory">
-            <thead class="tableHead">
-                <tr>
-                    <th>Fight Date</th>
-                    <th>Winner</th>
-                </tr>
-            </thead>
-            <tbody>
-            {% for fight in fights %}
-                <tr>
-                <td class="dateWinner">{{ fight.date }}</td>
-                <td class="nameWinner">{{ fight.name }}</td>
-                </tr>
-            {% endfor %}
-            </tbody>
-        </table>
+        <div class="fightsTable">
 
-    </section>
-    
-</main>    
+            <table class="fightHistory">
+                <thead class="tableHead">
+                    <tr>
+                        <th>Fight Date</th>
+                        <th>Winner</th>
+                    </tr>
+                </thead>
+                <tbody>
+                {% for fight in fights %}
+                    <tr>
+                        <td class="dateWinner">{{ fight.date }}</td>
+                        <td class="nameWinner">{{ fight.name }}</td>
+                    </tr>
+                {% endfor %}
+                </tbody>
+            </table>
+
+        </div>
+
+</section>    
 {% endblock %}
