--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -331,6 +331,8 @@ progress {
 .fightsTable {
     display: flex;
     justify-content: space-around;
+    margin: 0;
+    padding: 0;
     
 }
 
@@ -344,7 +346,7 @@ progress {
 }
 
 tr, td {
-    font-size: 22px;
+    font-size: 1.5rem;
     padding: 1rem;
     border: var(--primaryBorder);
 }
@@ -487,7 +489,9 @@ tfoot {
 
 /* END WIN */
 /* PICK FIGHT|HISTORY*/
-
+tr, td {
+  font-size: 3rem;
+}
 /* END FIGHT|HISTORY */
 /* PICK LIST|FIGHTER*/
 .card-deck, .pick {
@@ -547,7 +551,9 @@ tfoot {
 
 /* END WIN */
 /* PICK FIGHT|HISTORY*/
-
+tr, td {
+  font-size: 1.8rem;
+}
 /* END FIGHT|HISTORY */
 /* PICK LIST|FIGHTER*/
 
